Privacy.HTML up

--- a/MODEL_3.0 copy.html
+++ b/MODEL_3.0 copy.html
@@ -17,16 +17,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.0 (160125)
-# URL: https://genialabile.com/genialabile-gpt-access.html
+# URL: https://genialabile.com/privacy-policy.html
 ===============================================================================
 -->
 <!-- START -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | GPT-Access</title>
-        <meta name="description" content="Genialabile - GPT-Access designed for Genialabile & Co.">
-        <link rel="canonical" href="https://genialabile.com/genialabile-gpt-access.html">
+        <title>Genialabile | Privacy Policy</title>
+        <meta name="description" content="Genialabile - Privacy Policy Content.">
+        <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                GPT ACCESS
+                PRIVACY POLICY
             </h1>
             <div class="imp-l">
                 <p>
@@ -52,112 +52,140 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        Hello Genialabile!
-                </p>
-                <p>
-                    <h3><br>
-                        🍪 What are cookies
-                    </h3>
-                    <hr class="thin-line">
-                        Cookies are small text files placed on your device by websites you visit.<br>
-                        They serve purposes such as remembering your preferences, enabling functionality, and collecting data for analytics.
-                </p>
-                <p>
-                    <h3><br>
-                        🥠 Type of cookies we only use
-                    </h3>
-                    <hr class="thin-line">
-                        Essential Cookies: the minimum required for the operation of our website.<br>
-                        These cookies cannot be disabled.
-                </p>
-                <p>
-                    <h3><br>
-                        🍕 Why we do not use cookies
-                    </h3>
-                    <hr class="thin-line">
-                        #  We do not enhance functionality or provide personalized experiences.
-                        <br><br>
-                        # We do not analyze traffic with tools like Google Analytics.
-                        <br><br>
-                        # We do not display personalized ads or targeted content.
-                </p>
-                <p>
-                    <h3><br>
-                        🍝 Managing your cookies in others website 
-                    </h3>
-                    <hr class="thin-line">
-                        You have the right to manage your cookie preferences.
-                        Adjust your browser settings to block or delete cookies.
-                        Use platforms like:
-                        <br><br>
-                        # <a href="https://www.youronlinechoices.com/" target="_blank">Your Online Choices</a> (EU).
-                        <br><br>
-                        # <a href="https://optout.aboutads.info/" target="_blank">YourAdChoices</a> (US).
-                        <br><br>
-                        Disable Google Analytics tracking via 
-                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank">Google Analytics Opt-Out Add-on</a>.
-                </p>
-                <p>
-                    <h3><br>
-                        🥪 Cookies do not used on this website 
-                    </h3>
-                    <hr class="thin-line">
-                        Below is a list of the cookies we do not use:
-                        <br><br>
-                        # Session Cookies:
+                        This Privacy Policy explains how we collect, use, and protect your personal information while ensuring compliance with international.
                         <br>
-                        Temporary cookies that expire when you close your browser.
-                        <br><br>
-                        # Persistent Cookies:
-                        <br>
-                        Remain on your device until deleted manually or automatically after a defined period.
-                        <br><br>
-                        # Third-Party Cookies:
-                        <br>
-                        Set by external services like Google Analytics or social media platforms.
-                        <!--<a href="https://tools.google.com/dlpage/gaoptout" target="_blank">Google Analytics Opt-Out Add-on</a>.
-                        -->
+                        Our policy follow the European Union (EU), and United States (US) data protection laws standard.
                 </p>
                 <p>
                     <h3><br>
-                        🔑 Data protection
+                        📂 Information we collect
                     </h3>
                     <hr class="thin-line">
-                        All data collected via cookies is anonymized wherever possible.
+                        # Personal Identification Data:
                         <br>
-                        Personal data processed through cookies complies with applicable laws, including GDPR (EU) and CCPA (US).
-                </p>
-                <p>
-                    <h3><br>
-                        🌺 Updates to this policy
-                    </h3>
-                    <hr class="thin-line">
-                        We reserve the right to update this Cookie Policy.
-                        <br>
-                        Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
-                </p>
-                <p>
-                    <h3><br>
-                        ⚠️ Disagree with this policy
-                    </h3>
-                    <hr class="thin-line">
-                        If you do not agree with the use of cookies, you may disable them using the dedicated options or exit cookie's website immediately.
+                        Name, email address, and other contact details provided by you.
                         <br><br>
-                        Continuing to use this website implies consent to Cookie Policy.
+                        # Essential Cookies:
+                        <br>
+                        Required for the operation of our website.
                 </p>
                 <p>
                     <h3><br>
-                        📮 About cookies we use
+                        🧸 How we use your information
+                    </h3>
+                    <hr class="thin-line">
+                        # Communication:
+                        <br>
+                        Respond to inquiries and provide updates.
+                        <br><br>
+                        # Compliance:
+                        <br>
+                        Fulfill legal obligations and enforce our Terms and Conditions.
+                 </p>
+                <p>
+                    <h3><br>
+                        💈 Google Analytics
+                    </h3>
+                    <hr class="thin-line">
+                        # We do not use Google Analytics to understand user interactions.
+                        <br><br><!---It collects anonymized data such as IP addresses, geographic location, and browsing activity.-->
+                        # Opt-Out:
+                        <br>
+                        Users can manage the tracking through the
+                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;">Google Analytics Opt-Out Browser Add-on</a>.
+                        <!-- Users can disable Google Analytics tracking through the -->
+                </p>
+                <p>
+                    <h3><br>
+                        🪝 Your rights
+                    </h3>
+                    <hr class="thin-line">
+                        EU Users (GDPR):
+                        <br>
+                        # Right to access, correct, or delete your data.
+                        <br><br>
+                        # Right to restrict processing and data portability.
+                        <br><br>
+                        # Right to withdraw consent at any time.
+                        <br><br>
+                        US Users (CCPA):
+                        <br>
+                        # Right to know what personal data we collect.
+                        <br><br>
+                        # Right to request deletion of your data.
+                        <br><br>
+                        # Right to opt-out of data sharing for targeted advertising.
+             </p>
+                <p>
+                    <h3><br>
+                        📃 Data storage and retention
+                    </h3>
+                    <hr class="thin-line">
+                     # Your data is securely stored on servers located.
+                      <br><br>
+                      #  We retain your data only as long as necessary for the outlined purposes or as required by law.    
+                </p>
+                <p>
+                    <h3><br>
+                        🍪 Cookies
+                    </h3>
+                    <hr class="thin-line">
+                        Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;">Cookie Policy</a>
+                        for more information about how we use cookies on this website.
+                        <br><br>
+                        # Cookies are used to improve user experience.
+                        <br><br>
+                        # Manage your preferences through browser settings or via the 
+                        <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;">Your Online Choices</a> platform.
+               </p>
+                <p>
+                    <h3><br>
+                        🔒 Data security
+                    </h3>
+                    <hr class="thin-line">
+                        We implement technical and organizational measures to safeguard your data from unauthorized access or misuse.
+                        Security for us is a top priority.
+                </p>
+                <p>
+                    <h3><br>
+                        📠 Sharing your information
+                    </h3>
+                    <hr class="thin-line">
+                        # We do not sell your personal data.
+                        <br><br>
+                        #  Data may be shared with service providers (e.g., hosting and email) or legal authorities, if required.
+                </p>
+                <p>
+                    <h3><br>
+                        🛵 International transfers
+                    </h3>
+                    <hr class="thin-line">
+                        Your information may be transferred outside your Country.
+                        <br>
+                        We ensure data protection measures are in place.
+                </p>
+                <p>
+                    <h3><br>
+                        🎭 Change to this privacy policy
+                    </h3>
+                    <hr class="thin-line">
+                        # Updates will be posted on this page with the "Last Updated" date.
+                        <br><br>
+                        # Continued use of our services implies acceptance of the updated policy.
+                </p>
+                <p>
+                    <h3><br>
+                        📮 About your privacy
                     </h3> 
                     <hr class="thin-line">
-                        If you have any questions or concerns about our use of cookies, please contact us at:
+                        If you have any questions or concerns, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Cookie%20policy">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20policy"">
+                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy"">
                             genialabile@gmail.com
                         </a>
                 </p>
