--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -156,11 +156,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         If you have any questions or concerns about our use of cookies, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Cookie%20policy">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20policy">
+                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy">
                             genialabile@gmail.com
                         </a>
                 </p>
