pagine aggiornate per v3

--- a/contacts.html
+++ b/contacts.html
@@ -53,9 +53,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         If you have any questions, feedback, or inquiries about Genialabile, feel free to reach out to us using the information below.
-                        <br>
+                        We are always looking for new ways to improve our services and would love to hear about your experience.
+                        Continuing to evolve and improve our Gen-IA Framework Models and knowledge is our primary goal.
+                        <br><br>
                         <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!">Join</a>
-                        in our preview access for beta tester.
+                        our preview access for beta testers or early adopters to explore the efficiency of our Models.
+                        The applications extend across various fields, from creative writing, art, and philosophy to complex business models and strategic marketing.
+                        <br><br>
+                        It is a pleasure to have you here, as explorers of the future we are building together.
                 </p>
                 <p>
                     <h3><br>
@@ -104,15 +109,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         Develop & Designed by
-                        <a href="https://x.com/seiseisette/">seiseisette</a>
+                        <a href="https://x.com/seiseisette/">seiseisette</a>.
                         <br><br>
-                        Website Hosted by GitHub Pages:
-                        <a href="https://github.com/seiseisette/Gen-IA/">Gen-IA</a>
+                        Website & Repository Hosted by GitHub:
+                        <a href="https://github.com/seiseisette/Gen-IA/">Gen-IA</a>.
                         <br><br>
-                        Genialabile available on ChatGPT. Powered by
-                        <a href="https://openai.com/">OpenAI</a>
+                        Genialabile and its Models are continuously evolving on ChatGPT.
+                        <br>
+                        Powered by <a href="https://openai.com/">OpenAI</a>.
                         <br><br>
-                        Concept & AI-Framework designed by seiseisette.
+                        Concept & AI-Models designed by seiseisette.
                         <br>
                         © 2025 Genialabile. All Rights Reserved.
                         <br>
