--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -54,7 +54,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         Genialabile does not use cookies for tracking users, analyzing performance, or delivering personalized content.
                         This Cookie Policy explains what cookies are, why we do not use them, and your options for managing cookies elsewhere.
-                        <br>
                         We use only the minimum required to improve user experience (UI),  without data collecting.
                 </p>
                 <p>
@@ -138,6 +137,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         We reserve the right to update this Cookie Policy.
                         <br>
                         Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
+                        Please take a moment to review this policy periodically, same for our <a href="https://genialabile.com/privacy-policy.html">Privacy Policy</a>.
                 </p>
                 <p>
                     <h3><br>
@@ -146,14 +146,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         If you do not agree with the use of cookies, you may disable them using the dedicated options or exit cookie's website immediately.
                         <br><br>
-                        Continuing to use this website implies consent to Cookie Policy.
+                        Continuing to use this website implies consent to this Cookie Policy and our Privacy Policy.
                 </p>
                 <p>
                     <h3><br>
                         📮 About cookies we use
                     </h3> 
                     <hr class="thin-line">
-                        If you have any questions or concerns about our use of cookies, please contact us at:
+                        If you have any questions or concerns, please contact us at:
                         <br><br>
                         Gen:
                         <a href="mailto:info@genialabile.com?subject=Cookie%20Policy">info@genialabile.com</a>
