--- a/genialabile-gpt-access.html
+++ b/genialabile-gpt-access.html
@@ -59,7 +59,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         📮 Contact
                     </h3> 
                     <hr class="thin-line">
-                        If you have any questions or concerns about our use of cookies, please contact us at:
+                        If you have any questions, please contact us at:
                         <br><br>
                         Gen:
                         <a href="mailto:info@genialabile.com?subject=Contact%20Request">info@genialabile.com</a>
