--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -87,7 +87,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         💈 Google Analytics
                     </h3>
                     <hr class="thin-line">
-                        # We do not use Google Analytics to understand user interactions.
+                        We do not use Google Analytics to understand user interactions.
                         <br><br><!---It collects anonymized data such as IP addresses, geographic location, and browsing activity.-->
                         # Opt-Out:
                         <br>
@@ -121,9 +121,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         📃 Data storage and retention
                     </h3>
                     <hr class="thin-line">
-                     # Your data is securely stored on servers located.
-                      <br><br>
-                      #  We retain your data only as long as necessary for the outlined purposes or as required by law.    
+                        Your data is securely stored on servers located.
+                        We retain your data only as long as necessary for the outlined purposes or as required by law.
+                        We do not store your data indefinitely in our systems.    
                 </p>
                 <p>
                     <h3><br>
@@ -132,10 +132,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;">Cookie Policy</a>
                         for more information about how we use cookies on this website.
-                        <br><br>
-                        # Cookies are used to improve user experience.
-                        <br><br>
-                        # Manage your preferences through browser settings or via the 
+                        Cookies are used to improve user experience.
+                        Manage your preferences through browser settings or via the 
                         <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;">Your Online Choices</a> platform.
                </p>
                 <p>
@@ -144,6 +142,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         We implement technical and organizational measures to safeguard your data from unauthorized access or misuse.
+                        Using encryption, firewalls, and access controls to protect your data and our information systems.
                         Security for us is a top priority.
                 </p>
                 <p>
@@ -151,9 +150,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         📠 Sharing your information
                     </h3>
                     <hr class="thin-line">
-                        # We do not sell your personal data.
-                        <br><br>
-                        #  Data may be shared with service providers (e.g., hosting and email) or legal authorities, if required.
+                        We do not sell your personal data in any form and circumstances.
+                        Data may be shared with service providers (e.g. hosting and email) or legal authorities, if required.
+                        We ensure data protection measures are in place, disabled by default in our systems.
                 </p>
                 <p>
                     <h3><br>
@@ -169,9 +168,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎭 Change to this privacy policy
                     </h3>
                     <hr class="thin-line">
-                        # Updates will be posted on this page with the "Last Updated" date.
-                        <br><br>
-                        # Continued use of our services implies acceptance of the updated policy.
+                        Updates will be posted on this page with the "Last Updated" date.
+                        Continued use of our services implies acceptance of the updated policy.
                 </p>
                 <p>
                     <h3><br>
