--- a/MODEL_3.0 copy.html
+++ b/MODEL_3.0 copy.html
@@ -17,16 +17,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.0 (160125)
-# URL: https://genialabile.com/privacy-policy.html
+# URL: https://genialabile.com/terms-and-conditions.html
 ===============================================================================
 -->
 <!-- START -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | Privacy Policy</title>
-        <meta name="description" content="Genialabile - Privacy Policy Content.">
-        <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
+        <title>Genialabile | Terms & Conditions</title>
+        <meta name="description" content="Genialabile - Terms & Conditions Disclosure.">
+        <link rel="canonical" href="https://genialabile.com/terms-and-conditions.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                PRIVACY POLICY
+                TERMS & CONDITIONS
             </h1>
             <div class="imp-l">
                 <p>
@@ -52,133 +52,123 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        This Privacy Policy explains how we collect, use, and protect your personal information while ensuring compliance with international.
-                        <br>
-                        Our policy follow the European Union (EU), and United States (US) data protection laws standard.
+                        Please read these Terms & Conditions [<a href="https://genialabile.com/terms-and-conditions">The Current Page</a>] carefully before using our website and services.
+                        By accessing or using our platform, you agree to comply with these Terms. If you do not agree, you must not use our services.
                 </p>
                 <p>
                     <h3><br>
-                        📂 Information we collect
+                        🧢 Acceptance of terms
                     </h3>
                     <hr class="thin-line">
-                        # Personal Identification Data:
-                        <br>
-                        Name, email address, and other contact details provided by you.
-                        <br><br>
-                        # Essential Cookies:
-                        <br>
-                        Required for the operation of our website.
+                        By using this website, you acknowledge and agree to these Terms and any applicable laws and regulations.
+                        If you are accessing our services from the European Union (EU) or the United States (US), specific legal provisions may apply as outlined below. 
                 </p>
                 <p>
                     <h3><br>
-                        🧸 How we use your information
+                        🍌 Use of the platform
                     </h3>
                     <hr class="thin-line">
-                        # Communication:
-                        <br>
-                        Respond to inquiries and provide updates.
+                        # The website and its content are provided for personal, non-commercial use unless explicitly authorized in writing.
                         <br><br>
-                        # Compliance:
-                        <br>
-                        Fulfill legal obligations and enforce our Terms and Conditions.
+                        # You must not use the platform for illegal activities or violate the rights of others.
                  </p>
                 <p>
                     <h3><br>
-                        💈 Google Analytics
-                    </h3>
-                    <hr class="thin-line">
-                        # We do not use Google Analytics to understand user interactions.
-                        <br><br><!---It collects anonymized data such as IP addresses, geographic location, and browsing activity.-->
-                        # Opt-Out:
-                        <br>
-                        Users can manage the tracking through the
-                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;">Google Analytics Opt-Out Browser Add-on</a>.
-                        <!-- Users can disable Google Analytics tracking through the -->
-                </p>
-                <p>
-                    <h3><br>
-                        🪝 Your rights
+                        🎟️ Privacy and data protection
                     </h3>
                     <hr class="thin-line">
                         EU Users (GDPR):
                         <br>
-                        # Right to access, correct, or delete your data.
+                        # We comply with the General Data Protection Regulation (GDPR).
                         <br><br>
-                        # Right to restrict processing and data portability.
-                        <br><br>
-                        # Right to withdraw consent at any time.
+                        You have the right to access, correct, or delete your personal data.
+                        <br>
+                        We process your data based on your consent, contract necessity, or legitimate interests as allowed by GDPR.
+                        For more details, refer to our <a href="https://genialabile.com/privacy-policy">Privacy Policy</a>.
                         <br><br>
                         US Users (CCPA):
                         <br>
-                        # Right to know what personal data we collect.
-                        <br><br>
-                        # Right to request deletion of your data.
-                        <br><br>
-                        # Right to opt-out of data sharing for targeted advertising.
-             </p>
-                <p>
-                    <h3><br>
-                        📃 Data storage and retention
-                    </h3>
-                    <hr class="thin-line">
-                     # Your data is securely stored on servers located.
-                      <br><br>
-                      #  We retain your data only as long as necessary for the outlined purposes or as required by law.    
+                        # Under the California Consumer Privacy Act (CCPA).
+                        <br><br> 
+                        You have the right to know what personal data we collect and request its deletion.
+                        For more information, visit our <a href="https://genialabile.com/privacy-policy">Privacy Policy</a>.
                 </p>
                 <p>
                     <h3><br>
-                        🍪 Cookies
+                        🔖 Intellectual property
                     </h3>
                     <hr class="thin-line">
-                        Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;">Cookie Policy</a>
-                        for more information about how we use cookies on this website.
-                        <br><br>
-                        # Cookies are used to improve user experience.
-                        <br><br>
-                        # Manage your preferences through browser settings or via the 
-                        <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;">Your Online Choices</a> platform.
-               </p>
-                <p>
-                    <h3><br>
-                        🔒 Data security
-                    </h3>
-                    <hr class="thin-line">
-                        We implement technical and organizational measures to safeguard your data from unauthorized access or misuse.
-                        Security for us is a top priority.
-                </p>
-                <p>
-                    <h3><br>
-                        📠 Sharing your information
-                    </h3>
-                    <hr class="thin-line">
-                        # We do not sell your personal data.
-                        <br><br>
-                        #  Data may be shared with service providers (e.g., hosting and email) or legal authorities, if required.
-                </p>
-                <p>
-                    <h3><br>
-                        🛵 International transfers
-                    </h3>
-                    <hr class="thin-line">
-                        Your information may be transferred outside your Country.
+                        All intellectual property, including content, designs, and trademarks, are owned by Genialabile and its Team or our licensors.
                         <br>
-                        We ensure data protection measures are in place.
+                        Unauthorized use, distribution, or reproduction of any materials is strictly prohibited.
+                        We reserve to take legal action against violators.
                 </p>
                 <p>
                     <h3><br>
-                        🎭 Change to this privacy policy
+                        🏀 User responsibility
                     </h3>
                     <hr class="thin-line">
-                        # Updates will be posted on this page with the "Last Updated" date.
-                        <br><br>
-                        # Continued use of our services implies acceptance of the updated policy.
+                        You agree to provide accurate and up-to-date information when using our services.
+                        You are responsible for safeguarding your account credentials and ensuring their confidentiality.
+                        Continuing use of our services implies acceptance of these Terms.
                 </p>
                 <p>
                     <h3><br>
-                        📮 About your privacy
+                        🎰 Limitation of liability
+                    </h3>
+                    <hr class="thin-line">
+                        We provide our website and services “as is” without warranties of any kind, express or implied.
+                        Genialabile is not liable for any direct, indirect, or consequential damages arising from the use or inability to use our platform.
+                        We reserve the right to modify or discontinue our services at any time.
+                        <br>
+                        User is directly responsible for any data loss or damage using our platform and services.
+                        we are not responsible for any third-party services or content linked to our website.
+                        Before using our services, you must ensure that they meet your requirements.
+                </p>
+                <p>
+                    <h3><br>
+                        📡 Specific terms by regulations
+                    </h3>
+                    <hr class="thin-line">
+                        We do not offer directly services from this website or our platforms or networks at the moment.
+                        For more information, please <a href="https://genialabile.com/contacts">contact us</a>.
+                        <br>
+                        As a side note, it is important to know and understand the following:
+                        <br><br>
+                        European Union (EU):
+                        <br>
+                        Consumers residing in the EU have the right to withdraw from any paid services within 14 days of purchase as per the Consumer Rights Directive.
+                        <br>
+                        If you have a complaint, you can contact your local data protection authority.
+                        <br><br>
+                        United States (US):
+                        <br>
+                        Users in California are protected under the CCPA and may opt out of data sharing for targeted advertising.
+                        Our services comply with federal regulations, but state-specific rules may apply.
+                </p>
+                <p>
+                    <h3><br>
+                        🛎️ Modifications
+                    </h3>
+                    <hr class="thin-line">
+                        We reserve the right to update these Terms at any time. Changes will be effective upon posting.
+                        It is your responsibility to review these Terms periodically for updates.
+                        We may also modify or discontinue our services without notice.
+                  </p>
+                <p>
+                    <h3><br>
+                        💎 Governing
+                    </h3>
+                    <hr class="thin-line">
+                    These Terms are governed by the: European Union & United States.
+                    If any provision is deemed invalid, the remaining provisions will remain in effect at this terms and conditions.
+                </p>
+                <p>
+                    <h3><br>
+                        📮 About our terms
                     </h3> 
                     <hr class="thin-line">
-                        If you have any questions or concerns, please contact us at:
+                        For licensing or legal inquiries, please contact us at:
                         <br><br>
                         Gen:
                         <a href="mailto:info@genialabile.com?subject=Cookie%20Policy">info@genialabile.com</a>
