--- a/MODEL_3.0 copy.html
+++ b/MODEL_3.0 copy.html
@@ -17,16 +17,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.0 (160125)
-# URL: https://genialabile.com/terms-and-conditions.html
+# URL: https://genialabile.com/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ===============================================================================
 -->
 <!-- START -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | Terms & Conditions</title>
-        <meta name="description" content="Genialabile - Terms & Conditions Disclosure.">
-        <link rel="canonical" href="https://genialabile.com/terms-and-conditions.html">
+        <title>Genialabile | xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</title>
+        <meta name="description" content="Genialabile - xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx">
+        <link rel="canonical" href="https://genialabile.com/terms-and-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
@@ -52,17 +52,17 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        Please read these Terms & Conditions [<a href="https://genialabile.com/terms-and-conditions">The Current Page</a>] carefully before using our website and services.
-                        By accessing or using our platform, you agree to comply with these Terms. If you do not agree, you must not use our services.
+                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                 </p>
                 <p>
                     <h3><br>
                         🧢 Acceptance of terms
                     </h3>
                     <hr class="thin-line">
-                        By using this website, you acknowledge and agree to these Terms and any applicable laws and regulations.
-                        If you are accessing our services from the European Union (EU) or the United States (US), specific legal provisions may apply as outlined below. 
-                </p>
+                         xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                 <p>
                     <h3><br>
                         🍌 Use of the platform
