--- a/contacts.html
+++ b/contacts.html
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                CONTACT & CREDITS
+                CONTACTS & CREDITS
             </h1>
             <div class="imp-l">
                 <p>
@@ -53,8 +53,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         If you have any questions, feedback, or inquiries about Genialabile, feel free to reach out to us using the information below.
-                        We are always looking for new ways to improve our services and would love to hear about your experience.
-                        Continuing to evolve and improve our Gen-IA Framework Models and knowledge is our primary goal.
+                        We are always looking for new ways to improve our mission and would love to hear about your experience.
+                        Continuing to evolve and improve our Gen-IA Operative Framework and knowledge is our primary goal.
                         <br><br>
                         <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!">Join</a>
                         our preview access for beta testers or early adopters to explore the efficiency of our Models.
@@ -114,11 +114,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Website & Repository Hosted by GitHub:
                         <a href="https://github.com/seiseisette/Gen-IA/">Gen-IA</a>.
                         <br><br>
-                        Genialabile and its Models are continuously evolving on ChatGPT.
+                        Genialabile is evolving and running  on ChatGPT.
                         <br>
                         Powered by <a href="https://openai.com/">OpenAI</a>.
                         <br><br>
-                        Concept & AI-Models designed by seiseisette.
+                        Concept & Gen-IA OFM Designed by seiseisette.
                         <br>
                         © 2025 Genialabile. All Rights Reserved.
                         <br>
